<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" android:padding="10dp">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <androidx.cardview.widget.CardView
                android:background="@color/transparent"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="7dp"
                app:cardCornerRadius="7dp"
                android:layout_marginBottom="7dp"
                android:layout_height="match_parent" app:cardMaxElevation="1dp" app:cardElevation="1dp"
                app:cardBackgroundColor="#ffffffff" android:layout_width="match_parent" android:layout_weight="1"
                android:id="@+id/pi_recently_added">
            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <ImageView
                        android:background="@drawable/round_img"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" android:id="@+id/pi_img_a"
                        android:scaleType="centerCrop"/>
                <TextView
                        android:text="@string/recently_added"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical" android:textColor="@color/black"
                        android:textSize="16sp" android:textStyle="bold" android:id="@+id/pi_ra_txt"/>
            </FrameLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
                android:background="@color/transparent"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="7dp"
                app:cardCornerRadius="7dp"
                android:layout_marginBottom="7dp"
                android:layout_height="70dp" app:cardMaxElevation="1dp" app:cardElevation="1dp"
                app:cardBackgroundColor="#ffffffff" android:layout_width="match_parent" android:layout_weight="1"
                android:id="@+id/pi_most_played">
            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <ImageView
                        android:background="@drawable/round_img"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" android:id="@+id/pi_img_b"
                        android:scaleType="centerCrop"/>
                <TextView
                        android:text="@string/mostly_played"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical" android:textColor="@color/black"
                        android:textSize="16sp" android:textStyle="bold" android:id="@+id/pi_mp_txt"/>
            </FrameLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <androidx.cardview.widget.CardView
                android:background="@color/transparent"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="7dp"
                app:cardCornerRadius="7dp"
                android:layout_marginBottom="7dp"
                android:layout_height="match_parent" app:cardMaxElevation="1dp" app:cardElevation="1dp"
                app:cardBackgroundColor="#ffffffff" android:layout_width="match_parent" android:layout_weight="1"
                android:id="@+id/pi_recently_played">
            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <ImageView
                        android:background="@drawable/round_img"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" android:id="@+id/pi_img_c"
                        android:scaleType="centerCrop"/>
                <TextView
                        android:text="@string/recently_played"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical" android:textColor="@color/black"
                        android:textSize="16sp" android:textStyle="bold" android:id="@+id/pi_rp_txt"/>
            </FrameLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
                android:background="@color/transparent"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="7dp"
                app:cardCornerRadius="7dp"
                android:layout_marginBottom="7dp"
                android:layout_height="70dp" app:cardMaxElevation="1dp" app:cardElevation="1dp"
                app:cardBackgroundColor="#ffffffff" android:layout_width="match_parent" android:layout_weight="1"
                android:id="@+id/pi_liked_songs">
            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <ImageView
                        android:background="@drawable/round_img"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" android:id="@+id/pi_img_d"
                        android:scaleType="centerCrop"/>
                <TextView
                        android:text="@string/liked_musics"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical" android:textColor="@color/black"
                        android:textSize="16sp" android:textStyle="bold" android:id="@+id/pi_ls_txt"/>
            </FrameLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <androidx.cardview.widget.CardView
            android:background="@color/transparent"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="7dp"
            android:layout_marginBottom="7dp"
            android:layout_height="match_parent" app:cardMaxElevation="1dp" app:cardElevation="1dp"
            app:cardBackgroundColor="#ffffffff" android:layout_width="match_parent" android:layout_weight="1"
            android:id="@+id/pi_make_new">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:background="#FFEB3B">
            <TextView
                    android:text="@string/add_new_playlist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical" android:textColor="@color/black"
                    android:textSize="16sp" android:textStyle="bold" android:layout_weight="1" android:padding="10dp"/>
            <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp" app:srcCompat="@drawable/plus" android:id="@+id/imageView"
                    android:padding="10dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>